--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
     "dependencies": {
-        "xchacha20-js": "^0.3.1",
+        "js-string-compression": "^1.0.1",
         "simple-aes-256": "^3.0.1",
-        "shuffle-seed": "^1.1.6",
-        "sovrin-did": "^1.4.0",
-        "express": "^4.18.1"
+        "body-parser": "^1.20.0",
+        "mongodb": "^4.7.0",
+        "express": "^4.18.1",
+        "hqc": "^1.02"
     }
 }
